BUG 4357, partial 4365: World Bank/Tickerlayout issues.
QA: Retest.

To-be-

--- a/app/styles/canvas.sass
+++ b/app/styles/canvas.sass
@@ -193,3 +193,6 @@
 
   .viewPreviewContainer
     position: relative
+
+  .fullHeight
+    height: 100%
